--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,14 +2,13 @@
 
 name: CI for Frontend and Backend
 
-# main 브랜치에 push 이벤트가 발생했을 때 워크플로우를 실행합니다.
+# main 브랜치에 push 이벤트가 발생하면 실행
 on:
   push:
     branches:
       - main
 
 jobs:
-  # 1. 변경된 파일 목록을 감지하는 Job
   detect-changes:
     runs-on: ubuntu-latest
     outputs:
@@ -37,7 +36,6 @@ jobs:
 
   # 2. Frontend 빌드 및 테스트 Job
   build-frontend:
-    # detect-changes Job이 완료된 후에 실행되며, frontend 디렉토리에 변경이 있을 때만 실행됩니다.
     needs: detect-changes
     if: needs.detect-changes.outputs.frontend == 'true'
     runs-on: ubuntu-latest
@@ -58,6 +56,9 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+
+      - name : Grant execute permission for Vite
+        run : chmod +x ./node_modules/.bin/vite
 
       - name: Run tests
         run: npm test
