--- a/fivesense/src/main/resources/application.properties
+++ b/fivesense/src/main/resources/application.properties
@@ -19,5 +19,9 @@ spring.jpa.properties.logging.level.org.hibernate.SQL=debug
 kiwoom.api.key=${KIWOOM_API_KEY}
 kiwoom.api.secret=${KIWOOM_API_SECRET}
 
-# OpenAI API 설정 (git marge 전에 꼭 제거 할 것)
+# OpenAI API 설정
 openai.api.key=${OPENAI_API_KEY}
+
+# Naver API 설정
+naver.api.id=${NAVER_CLIENT_ID}
+naver.api.secret=${NAVER_CLIENT_SECRET}
